2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_ls): Handle error in parsing
	device name.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (locate_attr): Avoid set in if.
	(grub_ntfs_iterate_dir): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Efiemu stylistic fixes and gettext.

	* grub-core/efiemu/i386/loadcore32.c
	(grub_arch_efiemu_relocate_symbols32): Avoid set in if.
	* grub-core/efiemu/i386/loadcore64.c
	(grub_arch_efiemu_relocate_symbols64): Likewise.
	* grub-core/efiemu/i386/pc/cfgtables.c
	(grub_machine_efiemu_init_tables): Likewise.
	* grub-core/efiemu/loadcore.c (grub_efiemu_resolve_symbols): Likewise.
	(grub_efiemu_loadcore_initXX): Add a filename argument.
	All users updated.
	Improved error message.
	* grub-core/efiemu/loadcore_common.c (grub_efiemu_loadcore_init):
	Add a filename argument.
	All users updated.
	* grub-core/efiemu/symbols.c (grub_efiemu_set_virtual_address_map):
	Reclassify double relocation as GRUB_ERR_BUG.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/play.c (grub_cmd_play): Improve error
	handling.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (grub_cmd_hdparm): Allow running
	on partition.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_error_save): Fix cleaning grub_errno.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve string. Gettextize.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove -Winline altogether and -Wmissing-prototypes on
	utils.
	* util/import_gcry.py: Add -Wno-strict-aliasing on checked modules.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_print_partmap)
	[GRUB_UTIL]: New function.
	(insert_array) [GRUB_UTIL]: Store partmaps.
	* include/grub/diskfilter.h (grub_diskfilter_pv) [GRUB_UTIL]: New member